objects/avoka__Transact_Delivery_Processor__c.object
<CustomObject>
    <description>Defines the delivery processor configuration for a specific type of submission delivery, keyed by form code.</description>
    <fields>
        <fullName>avoka__Abandoned_Processor_Class__c</fullName>
        <description>The APEX Class Name to use for delivery processing of abandoned transactions for the specified form code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The APEX Class Name to use for delivery processing of abandoned transactions for the specified form code.</inlineHelpText>
        <label>Abandoned Processor Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Abandoned_Processor_Config__c</fullName>
        <description>Configuration details for the abandoned transaction delivery processor. Format of the config is determined by the Processor Class that uses it - typically JSON.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configuration details for the abandoned transaction delivery processor. Format of the config is determined by the Processor Class that uses it - typically JSON.</inlineHelpText>
        <label>Abandoned Processor Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Completed_Processor_Class__c</fullName>
        <defaultValue>&quot;TransactDeliveryProcessor&quot;</defaultValue>
        <description>The APEX Class Name to use for delivery processing of completed transactions for the specified form code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The APEX Class Name to use for delivery processing of completed transactions for the specified form code.</inlineHelpText>
        <label>Completed Processor Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Completed_Processor_Config__c</fullName>
        <description>Configuration details for the completed transaction delivery processor. Format of the config is determined by the Processor Class that uses it - typically JSON.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configuration details for the completed transaction delivery processor. Format of the config is determined by the Processor Class that uses it - typically JSON.</inlineHelpText>
        <label>Completed Processor Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Saved_Processor_Class__c</fullName>
        <description>The APEX Class Name to use for delivery processing of saved transactions for the specified form code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The APEX Class Name to use for delivery processing of saved transactions for the specified form code.</inlineHelpText>
        <label>Saved Processor Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Saved_Processor_Config__c</fullName>
        <description>Configuration details for the saved transaction delivery processor. Format of the config is determined by the Processor Class that uses it - typically JSON.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configuration details for the saved transaction delivery processor. Format of the config is determined by the Processor Class that uses it - typically JSON.</inlineHelpText>
        <label>Saved Processor Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Delivery Processor</label>
    <listViews>
        <fullName>avoka__All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>avoka__Saved_Processor_Class__c</columns>
        <columns>avoka__Completed_Processor_Class__c</columns>
        <columns>avoka__Abandoned_Processor_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>